class/lect/Lect-16/report.txt
TensorFlow 2.0 Upgrade Script
-----------------------------
Converted 1 files
Detected 0 issues that require attention
--------------------------------------------------------------------------------
================================================================================
Detailed log follows:

================================================================================
--------------------------------------------------------------------------------
Processing file 'tf1.py'
 outputting to 'tf1_v2.py'
--------------------------------------------------------------------------------

ERROR: Failed to parse.
Traceback (most recent call last):
  File "/Users/pschlump/anaconda3/lib/python3.7/site-packages/tensorflow_core/tools/compatibility/ast_edits.py", line 916, in update_string_pasta
    t = pasta.parse(text)
  File "/Users/pschlump/anaconda3/lib/python3.7/site-packages/pasta/__init__.py", line 23, in parse
    t = ast_utils.parse(src)
  File "/Users/pschlump/anaconda3/lib/python3.7/site-packages/pasta/base/ast_utils.py", line 56, in parse
    tree = ast.parse(sanitize_source(src))
  File "/Users/pschlump/anaconda3/lib/python3.7/ast.py", line 35, in parse
    return compile(source, filename, mode, PyCF_ONLY_AST)
  File "<unknown>", line 13
    print session.run(y)
                ^
SyntaxError: invalid syntax

--------------------------------------------------------------------------------

